--- a/Exercicios/SemanticaCSS/style.css
+++ b/Exercicios/SemanticaCSS/style.css
@@ -45,11 +45,31 @@ body {
     background: rgb(7,66,207);
     background: radial-gradient(circle, rgba(7,66,207,1) 2%, rgba(7,66,207,1) 30%, rgba(9,105,121,1) 91%);
   margin-top: 15%;
-  margin-left: 40%;
+  margin-left: auto;
+  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 #bodyLogin form img{
     margin-top: 10%;
     margin-left: 0;
+}
+
+#bodyContato {
+    background: rgb(37, 102, 114);
+    background: radial-gradient(circle, rgb(7, 164, 207) 2%, rgba(7,66,207,1) 30%, rgb(9, 121, 116) 91%);
+  margin-top: 15%;
+  margin-left: 40%;
+}
+#bodyContato form textarea {
+    width: 250px;
+    height: 100px;
+    text-align: center;
+    border-radius: 20px;
+    background-color: rgba(60, 165, 194, 0.333);
+}
+#bodyContato form {
+    text-align: 100%;
 }
 
  
