--- a/Exercicios/ResponsividadeMQ/style.css
+++ b/Exercicios/ResponsividadeMQ/style.css
@@ -6,7 +6,7 @@
     display: table;
     box-shadow: -1px -2px 5px 13px rgba(230,225,225,0.75);
 }
- .banner .img {
+ .banner img {
     width: 40%;
     height: 500px;
     float: right;
@@ -30,7 +30,8 @@
         .banner .texto {width: 100%; text-align: center; margin-top: 20px;}
         .banner h1 { font-size: 18px; }
         .banner p { font-size: 12px; margin-top:  20px;}
-        .banner img {width: 100%; height: 300px; margin-top: 20px; float: none;}
+        .banner img {width: 100%; height: 300px; margin-top: 20px; float: none;
+        }
     }
         
     
