--- a/Exercicios/ResponsExercicio1/style.css
+++ b/Exercicios/ResponsExercicio1/style.css
@@ -33,7 +33,7 @@
         .banner img {width: 100%; height: 300px; margin-top: 20px; float: none;
         }
     }
-    #header .menu img {
+    .menu img {
         width: 10%;
         height: 10px;
         float: left;
