--- a/Exercicios/ResponsExercicio1/style.css
+++ b/Exercicios/ResponsExercicio1/style.css
@@ -38,6 +38,9 @@
         height: 10px;
         float: left;
     }
+    .noticias{
+        color: rgba(209, 65, 65, 0.651);
+    }
         
     
 
