--- a/Exercicios/AtividadeSituacional 24-03-23/Exercicio1/style.css
+++ b/Exercicios/AtividadeSituacional 24-03-23/Exercicio1/style.css
@@ -1,28 +1,32 @@
-
-header{
+header {
     display: flex;
     width: 100%;
     background-color: rgba(231, 72, 72, 0.374);
 }
-header h1{
- display:flex;
- justify-content:center;
+
+header h1 {
+    display: flex;
+    justify-content: center;
 }
-header img{
+
+header img {
     width: 50%;
     height: 100px;
     float: left;
 }
-.noticias{
+
+.noticias {
     display: flex;
     justify-content: center;
     color: red;
 }
-body{
-    background: rgb(171,171,200);
-    background: linear-gradient(90deg, rgba(171,171,200,1) 17%, rgba(109,105,168,1) 45%, rgba(195,194,221,1) 83%);
+
+body {
+    background: rgb(171, 171, 200);
+    background: linear-gradient(90deg, rgba(171, 171, 200, 1) 17%, rgba(109, 105, 168, 1) 45%, rgba(195, 194, 221, 1) 83%);
 }
-.texto2{
-    background: rgb(171,171,200);
-    background: linear-gradient(90deg, rgba(171,171,200,1) 17%, rgba(109,105,168,1) 45%, rgba(195,194,221,1) 83%);
+
+.texto2 {
+    background: rgb(171, 171, 200);
+    background: linear-gradient(90deg, rgba(171, 171, 200, 1) 17%, rgba(109, 105, 168, 1) 45%, rgba(195, 194, 221, 1) 83%);
 }
