--- a/Exercicios/ResponsExercicio2/style.css
+++ b/Exercicios/ResponsExercicio2/style.css
@@ -36,3 +36,21 @@ header img{
     display: inline;
    }
 }
+.parte1{
+    margin: 0;
+    width: 100%;
+    height: 30vh;
+    background-image: url(img/matrix.jfif);
+}
+.parte text{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+.parte1 h1{
+    color: white;
+    font-size: 24px;
+}
+.parte1 p{
+    color: white;
+}
