--- a/Exercicios/ResponsExercicio2/style.css
+++ b/Exercicios/ResponsExercicio2/style.css
@@ -12,12 +12,15 @@ header{
     align-items: center;
 }
 header img{
+    height: 40%;
     height: 90%;
+    float: left;
+    left: 0%;
 }
  .menu{
     width: 50%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 .menu .link{
     text-decoration: none;
@@ -28,29 +31,71 @@ header img{
     display: none; /* esconder elemento do display */
 }
 
-@media screen and (max-width: 800px){
-   .menu{
-         display: none;
-   }
-   .hamb{
-    display: inline;
-   }
-}
+
 .parte1{
-    margin: 0;
+    padding: 1px;  /* borda interna */
+    margin: 0%;
     width: 100%;
-    height: 30vh;
-    background-image: url(img/matrix.jfif);
+    height: 60vh;
+    background-image: url(img/backGroupInfo.jpg);
+    background-size: cover;
 }
-.parte text{
+.parte1 .titulo{
     height: 100vh;
-    display: flex;
-    align-items: center;
+    margin: 1%;
 }
 .parte1 h1{
     color: white;
     font-size: 24px;
 }
-.parte1 p{
-    color: white;
+.parte1 h2{
+    color: red;
 }
+.parte1 .titulo img{
+    width: 5%;
+    height: 10vh;
+}
+.parte2{
+    width: 40%;
+    height: 15vh;
+}
+.parte2 h1{
+    font-size: 80px;
+    color: bisque;
+}
+.parte3{
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.parte3 img{
+    width: 40%;
+    height: 90%;
+}
+.parte3 .texto{
+    width: 50%;
+    height: 100%;
+}
+.texto h1{
+    color: aqua;
+    font-size: 40px;
+}
+.texto p{
+    color: aliceblue;
+    font-size: 15px;
+}
+
+@media screen and (max-width: 800px){ /* responsividade */
+    .menu{   display: none;   }
+    .hamb{ display: inline;  }
+    .parte1 .titulo{  width: 100%;   }
+    .titulo h1{   font-size: 60px;  }
+    .titulo h2{  font-size: 30px;  }
+    .parte2{    width: 100%;   }
+    .parte2 h1{  font-size: 40px;  }
+    .parte3{     display: inline;  }
+    .parte img{   width: 100%;    }
+    .parte .texto{    width: 100%;    }
+ }
