--- a/Exercicios/ResponsExercicio2/style.css
+++ b/Exercicios/ResponsExercicio2/style.css
@@ -1,8 +1,9 @@
-body{
+body {
     margin: 0;
     background-color: black;
 }
-header{
+
+header {
     margin: 0;
     background-color: red;
     width: 100%;
@@ -11,92 +12,143 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-header img{
+
+header img {
     height: 40%;
     height: 90%;
     float: left;
     left: 0%;
 }
- .menu{
+
+.menu {
     width: 50%;
     display: flex;
     justify-content: space-around;
 }
-.menu .link{
+
+.menu .link {
     text-decoration: none;
     font-size: 24px;
-    color:aliceblue;
+    color: aliceblue;
 }
-.hamb{
-    display: none; /* esconder elemento do display */
+
+.hamb {
+    display: none;
+    /* esconder elemento do display */
 }
 
 
-.parte1{
-    padding: 1px;  /* borda interna */
+.parte1 {
+    padding: 1px;
+    /* borda interna */
     margin: 0%;
     width: 100%;
     height: 60vh;
     background-image: url(img/backGroupInfo.jpg);
     background-size: cover;
 }
-.parte1 .titulo{
+
+.parte1 .titulo {
     height: 100vh;
     margin: 1%;
 }
-.parte1 h1{
+
+.parte1 h1 {
     color: white;
     font-size: 24px;
 }
-.parte1 h2{
+
+.parte1 h2 {
     color: red;
 }
-.parte1 .titulo img{
+
+.parte1 .titulo img {
     width: 5%;
     height: 10vh;
 }
-.parte2{
+
+.parte2 {
     width: 40%;
     height: 15vh;
 }
-.parte2 h1{
+
+.parte2 h1 {
     font-size: 80px;
     color: bisque;
 }
-.parte3{
+
+.parte3 {
     width: 100%;
     height: 50vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.parte3 img{
+
+.parte3 img {
     width: 40%;
     height: 90%;
 }
-.parte3 .texto{
+
+.parte3 .texto {
     width: 50%;
     height: 100%;
 }
-.texto h1{
+
+.texto h1 {
     color: aqua;
     font-size: 40px;
 }
-.texto p{
+
+.texto p {
     color: aliceblue;
     font-size: 15px;
 }
 
-@media screen and (max-width: 800px){ /* responsividade */
-    .menu{   display: none;   }
-    .hamb{ display: inline;  }
-    .parte1 {height: 100vh;}
-    .parte1 .titulo{  width: 100%;   }
-    .parte1 .titulo h1{   font-size: 40px;  }
-    .parte1 .titulo h2{  font-size: 20px;  }
-    .parte2{    width: 100%;   }
-    .parte2 h1{  font-size: 40px;  }
-    .parte3{     display: inline;  }
-    .parte3 img{   width: 100%;    }
-    .parte3 .texto{    width: 100%;    }
- }
+@media screen and (max-width: 800px) {
+
+    /* responsividade */
+    .menu {
+        display: none;
+    }
+
+    .hamb {
+        display: inline;
+    }
+
+    .parte1 {
+        height: 100vh;
+    }
+
+    .parte1 .titulo {
+        width: 100%;
+    }
+
+    .parte1 .titulo h1 {
+        font-size: 40px;
+    }
+
+    .parte1 .titulo h2 {
+        font-size: 20px;
+    }
+
+    .parte2 {
+        width: 100%;
+    }
+
+    .parte2 h1 {
+        font-size: 40px;
+    }
+
+    .parte3 {
+        display: inline;
+    }
+
+    .parte3 img {
+        width: 100%;
+    }
+
+    .parte3 .texto {
+        width: 100%;
+    }
+}
