--- a/ProjetoFinal/SiteEventos/style.css
+++ b/ProjetoFinal/SiteEventos/style.css
@@ -1,24 +1,17 @@
-.carrossel {
-    display: flex;
+
+.container {
+    display:flex;
     justify-content: center;
-    margin-top: 4%;
+    margin-top: 8%;
+   }
 
-}
-
-#img1 {
-   
-    height: 500px;
-}
-
-#img2 {
-  
-    height: 500px;
-}
-
-#img3 {
-    
-    height: 500px;
-    
-}
-
+img{
+    width: 100%;
+    height: 400px;
+    }
+    .cards{
+        display:flex;
+        justify-content:center;
+        justify-content: space-around;
+    }
 
