--- a/ProjetoFinal/SiteEventos/style.css
+++ b/ProjetoFinal/SiteEventos/style.css
@@ -1,8 +1,20 @@
+body{
+  
+    background: rgb(4,49,18);
+background: linear-gradient(90deg, rgba(4,49,18,1) 4%, rgba(2,123,39,1) 51%, rgba(4,49,18,1) 96%);
+
+}
+.text1{
+    margin-top: 10%;
+    margin-left: 35%;
+    color: black;
+   
+}
 
 .container {
     display:flex;
     justify-content: center;
-    margin-top: 8%;
+    margin-top: 2%;
    }
 
 img{
@@ -18,6 +30,27 @@ img{
 h1{
     margin-left: 5%;
     color: white;
+}
+
+#cardFooter{
+    margin-left: 5%;
+    
+}
+
+#liCard{
+    color: black;
+}
+
+.cardP2{
+    margin-left: 5%;
+}
+
+#imgP21{
+    height: 200px;
+}
+
+#imgPD22{
+    height: 200px;
 }
 
 
