--- a/ProjetoFinal/SiteEventos/style.css
+++ b/ProjetoFinal/SiteEventos/style.css
@@ -1,24 +1,64 @@
-.carrossel {
+body{
+  
+    background: rgb(4,49,18);
+background: linear-gradient(90deg, rgba(4,49,18,1) 4%, rgba(2,123,39,1) 51%, rgba(4,49,18,1) 96%);
+
+}
+
+
+.text1{
+    margin-top: 10%;
+    margin-left: 35%;
+    color: black;
+   
+}
+
+.container {
+    display:flex;
+    justify-content: center;
+    margin-top: 2%;
+   }
+
+img{
+    width: 100%;
+    height: 400px;
+    }
+    .cards{
+        display:flex;
+        justify-content:center;
+        justify-content: space-around;
+    }
+
+h1{
+    margin-left: 5%;
+    color: white;
+}
+
+#cardFooter{
+    margin-left: 5%;
+    
+}
+
+#liCard{
+    color: black;
+}
+
+.cardP2{
+    margin-left: 5%;
+}
+
+#imgP21{
+    height: 200px;
+}
+
+#imgPD22{
+    height: 200px;
+}
+
+footer{
     display: flex;
     justify-content: center;
-    margin-top: 4%;
-
-}
-
-#img1 {
-   
-    height: 500px;
-}
-
-#img2 {
-  
-    height: 500px;
-}
-
-#img3 {
-    
-    height: 500px;
-    
+    margin-top: 2%;
 }
 
 
