--- a/ProjetoFinal/SiteEventos/style.css
+++ b/ProjetoFinal/SiteEventos/style.css
@@ -66,3 +66,23 @@ h2{
     color: white;
 
 }
+
+#imgLogoInsta{
+    margin-left: 2%;
+    width: 5%;
+    height: 50px;
+}
+
+.logoInsta{
+    margin-left: 3%;
+
+}
+
+#imgMap{
+    width: 5%;
+    height: 100px;
+}
+
+    
+
+
